CB-18823 - revert merge